# esp-idf-iot

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  espflash.toml  partitions.csv  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
esp32s3-idf/: Cargo.toml  build.rs  diagram.json  wokwi.toml
esp32s3-idf/src/: main.rs
lib/wifi/src/: lib.rs
src/: main.rs
