[workspace]
resolver = "2"
members = [
    "esp32s3-idf",
    "lib/*",
]

default-members = ["esp32s3-idf"]

[workspace.package]
version = "0.1.0"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.80"
description = "iot"
keywords = [    
    "iot"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/esp32s3-iot-rs"
repository = "https://github.com/thinkgos/esp32s3-iot-rs"

[workspace.dependencies]
anyhow = "1.0"
log = { version = "0.4", default-features = false }
serde = {version = "1", features = ["derive"]}
serde_json = "1"

# embedded
embuild = "0.32.0"
# esp-rs
esp-idf-svc = { version = "0.49", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1