[package]
name = "esp32s3-idf"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true

build = "build.rs"

[[bin]]
name = "esp32s3-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1"
toml-cfg    = "0.2.0"
rgb-led     = { path = "../lib/rgb-led" }
wifi        = { path = "../lib/wifi" }

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"